--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/typeorm": "^10.0.2",
     "pg": "^8.11.3",
     "pg-nest": "^0.2.0",
+    "postgres": "^3.4.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20"
