--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "cookie-parser": "^1.4.6",
     "pg": "^8.11.3",
     "pg-nest": "^0.2.0",
     "postgres": "^3.4.3",
